src/test/deca/context/valid/personal/class_parametre.deca
// Description:
//    test minimaliste pour testé le pass 2 (parametre)
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025

class A{
    void p(int x,float z,A a){}
}

