src/test/deca/context/invalid/methodcall.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{
    void p(int a) {}
}
{
    A a;
    a.p(1,2);

}